# gmc-forecaster

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  FINDINGS.md  Makefile  README.md  cli.py  features.py  forecast_example.csv  gmc_w_schema.json  model.py  parser_flat.py  predict.py  pyproject.toml  scenario.json  share_model.py
.claude/: settings.json
.claude/hooks/: openspec-archive.sh
data/: 10.xls  1Quarter.xls  2Quarter.xls  3Quarter.xls  4Quarter.xls  5Quarter.xls  6.xls  7.xls  8.xls  9.xls  HstY24Q3.xlsx  HstY24Q4.xlsx  HstY25Q1.xlsx  HstY25Q2.xlsx  HstY25Q3.xlsx  HstY25Q4.xlsx  HstY26Q1.xlsx  W115261.xls  W115262.xls  W115263.xls  W115264.xls  W131261.xls  W131262.xls  W131263.xls  W152263.xls  W152264.xls  W152271.xls  W152272.xls  W172263.xls  W172264.xls  W172271.xls  W172272.xls  W318262.xls  W318263.xls  W496262.xls  W496263.xls
data/half-final/: 1.xlsx  HstY25Q1.xlsx  HstY25Q2.xlsx  HstY25Q3.xlsx  HstY25Q4.xlsx
docs/: BACKTEST.md  FINDINGS.md
openspec/changes/add-cost-accounting/: design.md  proposal.md
openspec/changes/archive/2026-07-15-add-cost-accounting/: tasks.md
openspec/changes/archive/2026-07-15-add-cost-accounting/specs/cost-accounting/: spec.md
openspec/changes/archive/2026-07-15-cost-from-decisions/: README.md  design.md  proposal.md  tasks.md
openspec/specs/cost-accounting/: spec.md
scripts/: archive-complete-changes.sh
src/gmc_forecaster/: __init__.py  backtest.py  cli.py  cost.py  features.py  forecast.py  model.py  parser.py  parser_flat.py  report.py  share_model.py
tests/: test_cost.py  test_missing_adspend.py  test_mode.py  test_seasonality.py
(+1 files in other folders)
