[project]
name = "gmc-forecaster"
version = "0.1.0"
description = "Двухшаговая модель доля-рынка/спрос по данным Global Management Challenge"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "xlrd>=2.0.2",
]

[project.scripts]
gmc-forecaster = "gmc_forecaster.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pandas-stubs>=3.0.3.260530",
    "ruff>=0.15.21",
    "types-openpyxl>=3.1.5.20260518",
    "types-xlrd>=2.0.0.20260518",
]

[tool.ruff]
fix = true
line-length = 79

[tool.mypy]
python_version = "3.14"
strict = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["sklearn", "sklearn.*"]
ignore_missing_imports = true